<resources>
    <string name="app_name">鲁科检测</string>
    <string name="scan_a">A扫描</string>
    <string name="scan_b">B扫描</string>
    <string name="scan_a_back">数回A</string>
    <string name="scan_b_back">数回B</string>
    <string name="calibration">校准</string>
    <string name="device_power">仪器电量</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="work_temp">请输入温度(-200~800)</string>
    <string name="file_name">请输入文件名称</string>

    <string name="btn_sure">确定</string>
    <string name="btn_cancel">取消</string>
    <string name="right_write_work_temp">请输入正确温度</string>

    <string name="connect_succeeded">连接成功,无需再次连接</string>
    <string name="connect_success">连接成功</string>
    <string name="connect_discon">连接断开</string>
    <string name="connect_fail">连接失败</string>
    <string name="connect_loding">连接中....</string>
    <string name="no_connect">"未连接,请先连接"</string>
    <string name="connect_fail1">连接失败请检测设备是否正常开启或点击右上角信号图标重新链接</string>
    <string name="save_success">存储成功</string>

    <string name="write_workpipe">请输入材料名称</string>
    <string name="write_temp">请输入声速 m/s</string>
    <string name="write_land">请输入声速温度系数</string>
    <string name="pipe_have">材料及声速系数已存在</string>
    <string name="remove_sure">您确定要删除此项数据吗？</string>
    <string name="basisc_no_remove">基础材料及声速不可删除</string>
    <string name="remove_success">删除成功</string>
    <string name="is_first">已是第一张</string>
    <string name="is_last">已是最后一张</string>
    <string name="no_data">暂无数据,点击下部按钮刷新</string>

    <string name="project_button">功能按键</string>
    <string name="device_param">设备参数</string>
    <string name="direction_control">方向控制</string>
    <string name="in_project">进入程序</string>
    <string name="projress">加载中...</string>
</resources>