<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/theme_back_color"
        android:orientation="vertical"
        tools:context=".activity.MainActivity">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:orientation="horizontal">

        <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="20dp"
                android:src="@drawable/ic_logo"
                tools:ignore="ContentDescription,RtlHardcoded" />

        <com.google.android.material.tabs.TabLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/theme_back_color"
                app:tabIndicatorColor="@color/red"
                app:tabSelectedTextColor="@color/red"
                app:tabTextColor="@color/theme_color">

            <com.google.android.material.tabs.TabItem
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/scan_a" />

            <com.google.android.material.tabs.TabItem
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/scan_b" />

            <com.google.android.material.tabs.TabItem
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/scan_a_back" />

            <com.google.android.material.tabs.TabItem
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/scan_b_back" />

            <com.google.android.material.tabs.TabItem
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/calibration" />
        </com.google.android.material.tabs.TabLayout>

        <ImageView
                android:id="@+id/iv_FAWifiSign"
                android:layout_width="35dp"
                android:layout_height="40dp"
                android:padding="5dp"
                android:src="@drawable/ic_nosignal"
                tools:ignore="ContentDescription" />

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginRight="20dp"
                android:gravity="center"
                android:orientation="vertical"
                tools:ignore="RtlHardcoded">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:text="@string/device_power"
                    android:textColor="@color/theme_color"
                    android:textSize="9sp"
                    tools:ignore="SmallSp" />

            <com.example.lk_epk.view.BatteryView
                    android:id="@+id/bv_battery"
                    android:layout_width="35dp"
                    android:layout_height="15dp"
                    android:layout_marginLeft="2dp" />
        </LinearLayout>

    </LinearLayout>

    <View style="@style/HLine" />

    <FrameLayout
            android:id="@+id/flFragment"
            android:layout_marginTop="3dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
    </FrameLayout>

</LinearLayout>