<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical">

    <include layout="@layout/dialog_item_header" />

    <EditText
            android:id="@+id/editTextString"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_margin="10dp"
            android:background="@drawable/linelayout_backthemecolor_radion"
            android:gravity="top|left"
            android:hint="@string/file_name"
            android:paddingLeft="10dp"
            android:textSize="14dp"/>

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="42dp"
            android:orientation="horizontal"
            android:layout_gravity="right"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="0dp">
        <com.example.lk_epk.view.BaseButton
                android:id="@+id/btnCancelString"
                style="@style/BaseButton"
                app:bg_color="@color/theme_color"
                app:bg_corner="5dp"
                android:text="@string/btn_cancel"
                android:layout_marginRight="20dp"/>
        <com.example.lk_epk.view.BaseButton
                android:id="@+id/btnSureString"
                style="@style/BaseButton"
                app:bg_color="@color/theme_color"
                app:bg_corner="5dp"
                android:text="@string/btn_sure" />
    </LinearLayout>
</LinearLayout>