<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="4dp"
            android:layout_weight="1"
            android:orientation="vertical">

        <RelativeLayout style="@style/headerRelativeLayout">

            <TextView
                    android:id="@+id/tvProjectHeader"
                    style="@style/headerText"
                    android:text="@string/project_button" />

            <View
                    style="@style/HLine"
                    android:layout_width="4dp"
                    android:layout_height="13dp"
                    android:layout_toLeftOf="@+id/tvProjectHeader"
                    android:background="@color/red" />

            <View
                    style="@style/HLine"
                    android:layout_width="4dp"
                    android:layout_height="13dp"
                    android:layout_toRightOf="@+id/tvProjectHeader"
                    android:background="@color/red" />
        </RelativeLayout>

        <LinearLayout style="@style/linlayout">

            <LinearLayout style="@style/linlayin">

                <TextView
                        style="@style/tvTitle"
                        android:text="自动增益" />

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="25dp"
                        android:layout_gravity="center"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="8dp"
                        android:layout_marginBottom="5dp"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/linelayout_themecolor_radion"
                        android:gravity="center">

                    <Switch
                            android:id="@+id/swAutoAdd"
                            android:layout_width="wrap_content"
                            android:layout_height="25dp"
                            android:layout_gravity="center"
                            android:switchMinWidth="64dp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout style="@style/linlayin">

                <TextView
                        style="@style/tvTitle"
                        android:text="闸门" />

                <com.example.lk_epk.view.BaseButton
                        android:id="@+id/btnGate"
                        style="@style/BaseButton"
                        android:text="自动"
                        app:bg_color="@color/theme_color"
                        app:bg_corner="5dp" />
            </LinearLayout>

            <LinearLayout style="@style/linlayin">

                <TextView
                        style="@style/tvTitle"
                        android:text="平均等级" />

                <com.example.lk_epk.view.BaseButton
                        android:id="@+id/btnLeave"
                        style="@style/BaseButton"
                        android:text="2"
                        app:bg_color="@color/theme_color"
                        app:bg_corner="5dp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout style="@style/linlayout">

            <LinearLayout style="@style/linlayin">

                <TextView
                        style="@style/tvTitle"
                        android:text="材料类型" />

                <com.example.lk_epk.view.BaseButton
                        android:id="@+id/btnMaterialType"
                        style="@style/BaseButton"
                        android:text="碳钢"
                        app:bg_color="@color/theme_color"
                        app:bg_corner="5dp" />
            </LinearLayout>

            <LinearLayout style="@style/linlayin">

                <TextView
                        style="@style/tvTitle"
                        android:text="声速(m/s)" />

                <com.example.lk_epk.view.BaseButton
                        android:id="@+id/btnAudioSpeed"
                        style="@style/BaseButton"
                        android:text="3254.0"
                        app:bg_color="@color/theme_color"
                        app:bg_corner="5dp" />
            </LinearLayout>

            <LinearLayout style="@style/linlayin">

                <TextView
                        style="@style/tvTitle"
                        android:text="检波方式" />

                <com.example.lk_epk.view.BaseButton
                        android:id="@+id/btnWaveType"
                        style="@style/BaseButton"
                        android:text="射频波"
                        app:bg_color="@color/theme_color"
                        app:bg_corner="5dp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout style="@style/linlayout">

            <LinearLayout style="@style/linlayin">

                <TextView
                        style="@style/tvTitle"
                        android:text="范围扩展" />

                <com.example.lk_epk.view.BaseButton
                        android:id="@+id/btnRangeAdd"
                        style="@style/BaseButton"
                        android:text="1X"
                        app:bg_color="@color/theme_color"
                        app:bg_corner="5dp" />
            </LinearLayout>

            <LinearLayout style="@style/linlayin">

                <TextView
                        style="@style/tvTitle"
                        android:text="工作温度" />

                <com.example.lk_epk.view.BaseButton
                        android:id="@+id/btnWorkTemp"
                        style="@style/BaseButton"
                        android:text="25"
                        app:bg_color="@color/theme_color"
                        app:bg_corner="5dp" />
            </LinearLayout>

            <LinearLayout style="@style/linlayin">

                <TextView
                        style="@style/tvTitle"
                        android:text="参数初始" />

                <com.example.lk_epk.view.BaseButton
                        android:id="@+id/btnInitialize"
                        style="@style/BaseButton"
                        android:text="初始化"
                        app:bg_color="@color/theme_color"
                        app:bg_corner="5dp" />
            </LinearLayout>
        </LinearLayout>

        <RelativeLayout
                style="@style/headerRelativeLayout"
                android:layout_marginTop="1dp">

            <TextView
                    android:id="@+id/tvDeviceParam"
                    style="@style/headerText"
                    android:text="@string/device_param" />

            <View
                    style="@style/HLine"
                    android:layout_width="4dp"
                    android:layout_height="13dp"
                    android:layout_toLeftOf="@+id/tvDeviceParam"
                    android:background="@color/red" />

            <View
                    style="@style/HLine"
                    android:layout_width="4dp"
                    android:layout_height="13dp"
                    android:layout_toRightOf="@+id/tvDeviceParam"
                    android:background="@color/red" />
        </RelativeLayout>

        <LinearLayout style="@style/linlayout">

            <LinearLayout style="@style/linlayin">

                <TextView
                        style="@style/tvTitle"
                        android:text="电池电压" />

                <com.example.lk_epk.view.BaseButton
                        style="@style/BaseButton"
                        android:text="10.5X"
                        app:bg_color="@color/theme_color"
                        app:bg_corner="5dp" />
            </LinearLayout>

            <LinearLayout style="@style/linlayin">

                <TextView
                        style="@style/tvTitle"
                        android:text="电池电压" />

                <com.example.lk_epk.view.BaseButton
                        style="@style/BaseButton"
                        android:text="10.5X"
                        app:bg_color="@color/theme_color"
                        app:bg_corner="5dp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout style="@style/linlayout">

            <LinearLayout style="@style/linlayin">

                <TextView
                        style="@style/tvTitle"
                        android:text="电池电压" />

                <com.example.lk_epk.view.BaseButton
                        style="@style/BaseButton"
                        android:text="10.5X"
                        app:bg_color="@color/theme_color"
                        app:bg_corner="5dp" />
            </LinearLayout>

            <LinearLayout style="@style/linlayin">

                <TextView
                        style="@style/tvTitle"
                        android:text="电池电压" />

                <com.example.lk_epk.view.BaseButton
                        style="@style/BaseButton"
                        android:text="10.5X"
                        app:bg_color="@color/theme_color"
                        app:bg_corner="5dp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout style="@style/linlayout">

            <LinearLayout style="@style/linlayin">

                <TextView
                        style="@style/tvTitle"
                        android:text="电池电压" />

                <com.example.lk_epk.view.BaseButton
                        style="@style/BaseButton"
                        android:text="10.5X"
                        app:bg_color="@color/theme_color"
                        app:bg_corner="5dp" />
            </LinearLayout>

            <LinearLayout style="@style/linlayin">

                <TextView
                        style="@style/tvTitle"
                        android:text="电池电压" />

                <com.example.lk_epk.view.BaseButton
                        style="@style/BaseButton"
                        android:text="10.5X"
                        app:bg_color="@color/theme_color"
                        app:bg_corner="5dp" />
            </LinearLayout>
        </LinearLayout>

        <RelativeLayout
                style="@style/headerRelativeLayout"
                android:layout_marginTop="1dp">

            <TextView
                    android:id="@+id/tvDirectionControl"
                    style="@style/headerText"
                    android:text="@string/direction_control" />

            <View
                    style="@style/HLine"
                    android:layout_width="4dp"
                    android:layout_height="13dp"
                    android:layout_toLeftOf="@+id/tvDirectionControl"
                    android:background="@color/red" />

            <View
                    style="@style/HLine"
                    android:layout_width="4dp"
                    android:layout_height="13dp"
                    android:layout_toRightOf="@+id/tvDirectionControl"
                    android:background="@color/red" />
        </RelativeLayout>

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@color/theme_back_color">

            <com.fphoenixcorneae.widget.rocker.RockerView
                    android:id="@+id/rockerView"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="20dp" />
        </RelativeLayout>


    </LinearLayout>
</LinearLayout>